--- a/Assignments/Ex5_Sum/readme
+++ b/Assignments/Ex5_Sum/readme
@@ -1,4 +1,4 @@
-The codes implement the "ring sum", first exchaning one single element among processes (sum.c) and then exchaning a vector of elemnts (vectorsum.c). 
+The codes implement the "ring sum"  exchaning a vector of elemnts accross the processes (vectorsum.c). 
 
 To compile use the Makefile.
 In the vector version the dimension of the vector can be passed as a parameter (the default size is 4). 
